k8s/servicezap.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-service
  namespace: portfolio

spec:
  type: NodePort

  selector:
    app: portfolio      # <-- Match the Pod label

  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000  # <-- Match the containerPort
      nodePort: 30080
